force-app/main/default/objects/Device__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this device is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>