force-app/main/default/objects/Device__c/fields/Customer_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Device_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer Device Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>