force-app/main/default/objects/Device__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <description>This is the external id for the device relates to phoebe</description>
    <label>Device Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>