force-app/main/default/objects/Device__c/fields/Notification_On__c.field-meta.xml
<CustomField>
    <fullName>Notification_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the Notifications on on this device</description>
    <label>Notification On</label>
    <type>Checkbox</type>
</CustomField>